Test/Error/ac/ERROR.DUPLICATE.DEF.ac
CONST A 0;
CONST A 1;
